ДЗ 7. Табличный вид, кнопки, строка с путем к папке